# emuit

./: .gitattributes  .gitignore  README.md  emuit.py  ida-plugin.json  requirements.txt  setup.cfg
emuit/: __init__.py  base.py  emuit.py  ida.py  ida_utils.py  log.py  memory.py  result.py  utils.py  x86_64.py
emuit/arch/: __init__.py  base.py  regs.py  x86.py
emuit/ida/: emuit.py
tests/: test_base.py  test_emulation.py  test_result.py
