[metadata]
name = EmuIt
version = 0.6.0
desc = "Easy-to-use unicorn-based emulator with IDA plugin"
long_description = file: README.md
long_description_content_type="text/markdown",
author = "AzzOnFire"
author_email = ""
keywords = Unicorn, Emulator, IDA Pro, Plugin
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: System :: Emulators
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    
[options]
packages=find:
install_requires =
  unicorn
python_requires = >= 3.7
setup_require =
    setuptools >= 51.0.0
tests_suite=tests

[options.extras_require]
dev = pytest

[options.packages.find]
exclude =
  tests*
  venv*

[flake8]
extend-ignore =
    # Missing type annotation for self in method
    ANN101,
    # Missing type annotation for cls in classmethod
    ANN102,
    # Missing type annotation for *args
    ANN002,
    # Missing type annotation for **kwargs
    ANN003,
    # Missing return type annotation for special method (__init_ and s.o)
    ANN204,
exclude =
    .git,
    __pycache__,
    build,
    dist,
per-file-ignores =
    # imported but unused
    __init__.py: F401
